--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,13 +9,13 @@ node {
             "pattern": "petclinic/petclinic.war",
             "target": "ansible/templates/apps/" }]
         }"""
-    server.download(downloadSpec)  
+    server.download(downloadSpec) 
   sh label: 'Jenkins', script: "echo '<h1> TASK BUILD ID: ${env.BUILD_DISPLAY_NAME}</h1>' > ansible/templates/apps/index.html"
  }
   def project_ansible="ansible"
   dir(project_ansible) { 
   stage('Prod Deployment on AWS'){
-  sh label: 'terraform', script: 'ansible-playbook -i /root/.jenkins/workspace/PetClinic-Project_master/01-Jenkins/Code/petclinic/04-Terraform/jenkins-ci.ini -u ubuntu --key /root/.ssh/newkey.pem web-playbook.yaml'
+ sh label: 'terraform', script: 'ansible-playbook -i /root/.jenkins/workspace/etclinic-branches_Infrastructure/04-Terraform/03-Ansible-Deploy/jenkins-ci.ini -u ubuntu --key /root/.ssh/aditikey.pem web-playbook.yaml'
      } 
    }
 }
