--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,7 +12,7 @@ node {
     server.download(downloadSpec) 
   sh label: 'Jenkins', script: "echo '<h1> TASK BUILD ID: ${env.BUILD_DISPLAY_NAME}</h1>' > ansible/templates/apps/index.html"
  }
-  def project_ansible="ansible"
+  def project_ansible="03-Ansible/04-Tomcat"
   dir(project_ansible) { 
   stage('Prod Deployment on AWS'){
  sh label: 'terraform', script: 'ansible-playbook -i /root/.jenkins/workspace/terraform/04-Terraform/03-Ansible-Deploy/jenkins-ci.ini -u ubuntu --key /root/.ssh/aditikey.pem web-playbook.yaml'
